Fix GitHub codeQL alerts