@@ -58,7 +58,7 @@ class LinuxNITools extends NITools {
 		try {
 			if (_network_interface.isLoopback())
 				return Long.MAX_VALUE;
-			Process p = Runtime.getRuntime().exec("ethtool " + _network_interface.getName());
+			Process p = Runtime.getRuntime().exec(new String[]{"ethtool", _network_interface.getName()});
 			long res = -1;
 			try (InputStreamReader isr = new InputStreamReader(p.getInputStream())) {
 				try (BufferedReader input = new BufferedReader(isr)) {
